# LAN_file_sender

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  config.h  main.cpp  setting.cpp  setting.h  utils.cpp  utils.h
src/model/: column.h  host_info.cpp  host_info.h  host_interface.cpp  host_interface.h  host_model.cpp  host_model.h  progress_interface.cpp  progress_interface.h  progress_model.cpp  progress_model.h  receiver_model.cpp  receiver_model.h  recieve_progress_model.cpp  recieve_progress_model.h  send_progress_model.cpp  send_progress_model.h  transfer_info.cpp  transfer_info.h
src/server/: control_server.cpp  control_server.h  control_state.cpp  control_state.h  dhcp_server.cpp  dhcp_server.h  fileinfo.cpp  fileinfo.h  host_broadcaster.cpp  host_broadcaster.h  host_detector.cpp  host_detector.h  local_server.cpp  local_server.h  main_server.cpp  main_server.h  package_type.h  receive_task.cpp  receive_task.h  receive_worker.h  remote_server.cpp  remote_server.h  send_task.cpp  send_task.h  server.h  tcp_package.cpp  tcp_package.h  transfer_info.cpp  transfer_info.h  transfer_server.cpp  transfer_server.h  transfer_task.cpp  transfer_task.h
src/ui/: host_list.cpp  host_list.h  host_list_view.cpp  main_widget.cpp  main_widget.h  main_window.cpp  main_window.h  progress_bar.cpp  progress_bar.h  progress_list.cpp  progress_list.h  receiver_list.cpp  receiver_list.h  recieve_progress_list.cpp  recieve_progress_list.h  send_progress_list.cpp  send_progress_list.h  setting_dialog..cpp  setting_dialog.cpp  setting_dialog.h
test/: CMakeLists.txt  control_server_test.cpp  control_server_test.h  trans_server_test.cpp  trans_server_test.h
